--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Yayasan At-Tauhid Al-Islamy">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,10 +29,12 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>web_contoh</title>
+  <title>At-Tauhid</title>
   <link rel="manifest" href="manifest.json">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6PMB5D97smLtveyhMM2XNK0wJ9IInnVs"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
+  
 </body>
 </html>
