--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Yayasan At-Tauhid Al-Islamy">
+  <meta name="description" content="Data Setoran Santri MTA">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="web_contoh">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Data Setoran MTA">
+  <link rel="apple-touch-icon" href="favicon.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>At-Tauhid</title>
+  <title>Data Setoran MTA</title>
   <link rel="manifest" href="manifest.json">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB6PMB5D97smLtveyhMM2XNK0wJ9IInnVs"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
